--- a/.env
+++ b/.env
@@ -10,5 +10,5 @@ PORT=3200
 JWT_SECRET=your_jwt_secret_key_here
 
 # Payment Information
-BANK_ACCOUNT=1234567890
-BANK_NAME=ธนาคารกรุงไทย
+BANK_ACCOUNT=134-5-567992
+BANK_NAME=ธนาคารกรุงเทพ
