--- a/.env
+++ b/.env
@@ -12,3 +12,16 @@ JWT_SECRET=your_jwt_secret_key_here
 # Payment Information
 BANK_ACCOUNT=134-5-567992
 BANK_NAME=ธนาคารกรุงเทพ
+
+# LINE Bot Configuration
+LINE_CHANNEL_ACCESS_TOKEN=your_line_channel_access_token_here
+
+# ตัวเลือกการส่งข้อความ (เลือกอย่างใดอย่างหนึ่ง)
+# 1. ส่งให้ Admin คนเดียว
+LINE_ADMIN_USER_ID=your_admin_line_user_id_here
+
+# 2. ส่งเข้า LINE Group (แนะนำ)
+LINE_GROUP_ID=your_line_group_id_here
+
+# 3. ส่งให้หลายคน (คั่นด้วย comma)
+# LINE_NOTIFY_USERS=user_id_1,user_id_2,user_id_3
