--- a/.env
+++ b/.env
@@ -25,3 +25,7 @@ LINE_GROUP_ID=your_line_group_id_here
 
 # 3. ส่งให้หลายคน (คั่นด้วย comma)
 # LINE_NOTIFY_USERS=user_id_1,user_id_2,user_id_3
+
+# NBU-DRS Official
+#LINE_CHANNEL_ID=2007464067
+#LINE_CHANNEL_SECRET=f47921cc9c8dff41d77111bf2fd5cca0
