--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ LINE_GROUP_ID=your_line_group_id_here
 
 # ตัวเลือกการส่งข้อความ (เลือกอย่างใดอย่างหนึ่ง)
 # 1. ส่งให้ Admin คนเดียว
-LINE_ADMIN_USER_ID=your_admin_line_user_id_here
+#LINE_ADMIN_USER_ID=your_admin_line_user_id_here
 
 
 
